@@ -101,7 +101,7 @@ public class BarMagnetPanel extends FaradayPanel {
             int min = (int) ( 100.0 * FaradayConstants.BAR_MAGNET_STRENGTH_MIN / FaradayConstants.BAR_MAGNET_STRENGTH_MAX );
 
             // Slider
-            _strengthControl = new SimSharingLinearValueControl( qualifyUserComponent( UserComponents.barMagnetStrengthSlider ), min, max, FaradayStrings.LABEL_STRENGTH, "0", "%" );
+            _strengthControl = new SimSharingLinearValueControl( qualifyUserComponent( UserComponents.strengthControl ), min, max, FaradayStrings.LABEL_STRENGTH, "0", "%" );
             _strengthControl.setValue( min );
             _strengthControl.setMajorTickSpacing( 50 );
             _strengthControl.setMinorTickSpacing( 10 );
